--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,18 @@
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
+
+database.yml
+doc/
+*.swp
+*~
+.project
+.DS_Store
+.idea
+.secret
+.keep
+secrets.yml
+
+
+# Ignore application configuration
+/config/application.yml
